# ChangeLog for gnome-extra/libgda
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgda/ChangeLog,v 1.147 2010/09/09 18:02:23 ranger Exp $

  09 Sep 2010; Brent Baude <ranger@gentoo.org> libgda-4.1.4-r1.ebuild:
  Marking libgda-4.1.4-r1 ppc64 for bug 327803

  29 Aug 2010; Raúl Porcel <armin76@gentoo.org> libgda-4.1.4-r1.ebuild:
  alpha/ia64/sparc stable wrt #327803

  13 Aug 2010; Gilles Dartiguelongue <eva@gentoo.org> libgda-4.1.7.ebuild:
  Add missing dependency.

  31 Jul 2010; Pacho Ramos <pacho@gentoo.org> libgda-4.1.4-r1.ebuild:
  amd64 stable, bug 327803

*libgda-4.1.7 (26 Jul 2010)

  26 Jul 2010; Pacho Ramos <pacho@gentoo.org> +libgda-4.1.7.ebuild:
  Version bump with multiple bugfixes.

  25 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  libgda-4.1.4-r1.ebuild:
  stable x86, bug 327803

  20 Jul 2010; Jeroen Roovers <jer@gentoo.org> libgda-1.2.4.ebuild,
  libgda-3.0.4.ebuild, libgda-4.1.0.ebuild:
  Drop HPPA keywording (bug #324511).

  17 Jun 2010; Patrick Lauer <patrick@gentoo.org> libgda-1.2.4.ebuild,
  libgda-3.0.4.ebuild, libgda-4.1.0.ebuild, libgda-4.1.4.ebuild,
  libgda-4.1.4-r1.ebuild:
  Migrating away from deprecated postgres virtuals

  29 May 2010; Raúl Porcel <armin76@gentoo.org> libgda-4.1.4.ebuild,
  libgda-4.1.4-r1.ebuild:
  Add ~alpha/~ia64/~sparc

  04 Apr 2010; Raúl Porcel <armin76@gentoo.org> libgda-4.1.0.ebuild:
  alpha/ia64/sparc stable wrt #298201

*libgda-4.1.4-r1 (31 Mar 2010)

  31 Mar 2010; Gilles Dartiguelongue <eva@gentoo.org>
  +libgda-4.1.4-r1.ebuild, +files/libgda-4.1.4-install-header.patch:
  Install missing header file, bug #308793.

  16 Mar 2010; Christian Faulhammer <fauli@gentoo.org> libgda-4.1.0.ebuild:
  stable x86, bug 298201

  11 Mar 2010; Joseph Jezak <josejx@gentoo.org> libgda-4.1.4.ebuild:
  Marked ~ppc64.

  11 Mar 2010; Joseph Jezak <josejx@gentoo.org> libgda-4.1.0.ebuild:
  Marked ppc/ppc64 stable for bug #298201.
