@@ -1,6 +1,16 @@
 # ChangeLog for gnome-extra/libgda
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgda/ChangeLog,v 1.147 2010/09/09 18:02:23 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgda/ChangeLog,v 1.148 2010/09/13 18:11:33 pacho Exp $
+
+*libgda-4.1.10 (13 Sep 2010)
+
+  13 Sep 2010; Pacho Ramos <pacho@gentoo.org> -libgda-4.1.4.ebuild,
+  -libgda-4.1.7.ebuild, +libgda-4.1.10.ebuild:
+  Version bump adding gnome-keyring support and with multiple bugfixes:
+  GdaBrowser improvements & corrections, improved core API, core corrections
+  and optimization, many improvements to the UI extension, many improvements
+  and corrections to the GdaBrowser tool, fix configure issues (bug #333469
+  by Michal Kurgan). Remove old testing.
 
   09 Sep 2010; Brent Baude <ranger@gentoo.org> libgda-4.1.4-r1.ebuild:
   Marking libgda-4.1.4-r1 ppc64 for bug 327803
